# quackmetadata

./: .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  pyproject.toml
config/: quack_config.yaml  quack_config.yaml.template
examples/: headless_api_usage.py
src/quackmetadata/: __init__.py  cli.py  config.py  demo_cli.py  plugin.py  protocols.py  schemas.py  tool.py  tutorial.yaml  version.py
src/quackmetadata/commands/: __init__.py  metadata_cli.py
src/quackmetadata/integrations/: __init__.py  drive_handler.py
src/quackmetadata/plugins/: __init__.py  metadata.py  plugin_factory.py
src/quackmetadata/prompts/: __init__.py  generic.mustache
src/quackmetadata/prompts/metadata/: __init__.py  fewshot.mustache
src/quackmetadata/quackcore_candidate/: __init__.py
src/quackmetadata/quackcore_candidate/cli/: __init__.py  tool_cli.py
src/quackmetadata/quackcore_candidate/config/: __init__.py  config.py
src/quackmetadata/quackcore_candidate/plugins/: __init__.py  plugin.py  plugin_factory.py  tool_plugin.py
src/quackmetadata/quackcore_candidate/workflow/: __init__.py  file_processor.py
src/quackmetadata/schemas/: __init__.py  metadata.py
src/quackmetadata/utils/: __init__.py  drive_handler.py  llm_wrapper.py  prompt_engine.py  rarity.py
src/quacktool/: __init__.py  cli.py  config.py  core.py  demo_cli.py  models.py  plugin.py  protocols.py  version.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_headless_api.py  test_integration.py  test_models.py  test_plugin.py  test_property_based.py  test_version.py
